imlementasi depedency injection dan merefactor kode dangan cara yang disarankan

--- a/tasks.json
+++ b/tasks.json
@@ -62,5 +62,9 @@
   {
     "id": 16,
     "content": "Belajar NestJS"
+  },
+  {
+    "id": 17,
+    "content": "Belajar Javascript Fundamental"
   }
 ]
